<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" >

    <LinearLayout
        android:id="@+id/vehicle_number"
        style="@style/LoginFormContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:id="@+id/vnTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:text="@string/vehicle_number"
            android:textSize="16sp"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/vnEditView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text"
            android:hint="@string/vehicle_number"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        style="@style/LoginFormContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/confirmbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shine_blue"
            android:drawableTop="@drawable/confirm"
            android:text="@string/confirm_button" />

        <Button
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shine_blue"
            android:drawableTop="@drawable/home"
            android:text="@string/home_button" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/buttons"
        android:layout_marginTop="100dp"
        android:divider="@color/white" />

    <LinearLayout
        android:id="@+id/top"
        style="@style/LoginFormContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:id="@+id/latTextView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:text="@string/latitude_lable"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latTextView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/latitude_lable"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        style="@style/LoginFormContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/top"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:id="@+id/langTextView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:text="@string/Langitude_lable"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/langTextView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Langitude_lable"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/date"
        style="@style/LoginFormContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bottom"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:id="@+id/dateTextView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:text="@string/date_lable"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateTextView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_lable"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>